--- a/src/components/common/ProductBox/ProductBox.module.scss
+++ b/src/components/common/ProductBox/ProductBox.module.scss
@@ -10,12 +10,13 @@
     padding: 80% 10px 0 10px;
     background: {
       color: #f4f5f7;
-      size: contain;
+      size: cover;
       position: center;
       repeat: no-repeat;
     }
     overflow: hidden;
     align-items: flex-end;
+
 
     .sale {
       position: absolute;
