--- a/src/components/common/ProductBox/ProductBox.module.scss
+++ b/src/components/common/ProductBox/ProductBox.module.scss
@@ -75,4 +75,9 @@
     justify-content: space-between;
     align-items: center;
   }
+
+  .active{
+    background-color: $primary;
+    color: white;
+  }
 }
