--- a/src/components/common/Button/Button.module.scss
+++ b/src/components/common/Button/Button.module.scss
@@ -11,10 +11,11 @@
   font-weight: 600;
   padding: 10px 30px;
 
+  @extend %hover-animation;
+
   &:not(.noHover):hover {
-    color: #ffffff !important;
-    background-color: $primary;
-    text-decoration: none;
+    @extend .hover-background;
+    @extend .hover-text;
   }
 }
 
@@ -34,8 +35,10 @@
   font-size: 13px;
   line-height: 22px;
 
+  @extend %hover-animation;
+
   &:not(.noHover):hover {
-    background-color: #2a2a2a;
-    color: #ffffff;
+    @extend .hover-background;
+    @extend .hover-text;
   }
 }
