--- a/src/components/layout/CompanyClaim/CompanyClaim.module.scss
+++ b/src/components/layout/CompanyClaim/CompanyClaim.module.scss
@@ -64,7 +64,8 @@
 
       &:hover {
         .cartIcon {
-          background-color: lighten($primary, 10%);
+          @extend %hover-animation;
+          background-color: lighten($hover-background-color, 10%);
         }
       }
     }
