--- a/src/components/layout/Footer/Footer.module.scss
+++ b/src/components/layout/Footer/Footer.module.scss
@@ -23,7 +23,8 @@
             color: rgb(169, 169, 169);
 
             &:hover {
-              color: #ffffff;
+              @extend %hover-animation;
+              @extend .hover-text-dark-bg;
             }
           }
         }
@@ -72,7 +73,8 @@
             text-decoration: none;
 
             &:hover {
-              color: $primary;
+              @extend %hover-animation;
+              @extend .hover-text-dark-bg;
             }
           }
         }
