--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -1,16 +1,85 @@
 $base-padding: 24px;
 
-// LIST OF VARIABLES WITH COLORS
+// List of variables with colors - !TYLKO DO UŻYTKU W TYM PLIKU!
 $orange: #d58e32;
-$lightGray: #434343;
-$mediumGray: #363636;
-$darkGray: #2a2a2a;
-$borderDarkGray: #292929;
+$grayDarker: #434343;
+$grayDark: #363636;
+$grayMedium: #2a2a2a;
+$formBorderGrayDark: #292929;
+$white: #ffffff;
+$black: #000000;
+$grayLight: #e1e1e1;
+$grayLighter: #f4f5f7;
+$grayDarkest: #2a2a2a;
+$textGrayLight: #d8d8d8;
+$textGrayMedium: #a9a9a9;
+$textGrayBlue: #e0e3ed;
 
-$header-topbar-bg: $lightGray;
-$header-bg: $mediumGray;
-$footer-claim-bg: $darkGray;
-$footer-bg: $mediumGray;
-$primary: $orange;
-$text-color: $darkGray;
-$form-border-color: $borderDarkGray;
+
+// List of variables with colors - !DO UŻYTKU W KOMPONENTACH!
+
+$header-topbar-bg: $grayDarker;
+$header-bg: $grayDark;
+
+$footer-claim-bg: $grayMedium;
+$footer-bg: $grayDark;
+
+// do zweryfikowania od buttona
+$button-bg: $white;
+$button-border-color: $grayMedium;
+$button-text-color: $darkGray;
+$button-hover-text-color: $white;
+$button-hover-bg: $primary;
+
+$featureBox-bg: $white;
+$featureBox-text-transform-color: $grayMedium;
+$featureBox-icon-color: $white;
+$featureBox-bg-after: $orange;
+$featureBox-border-color: $orange;
+$featureBox-content-color: $orange;
+
+$productBox-bg: $white;
+$productBox-border: $grayLight;
+$productBox-overlay-bg: $grayLighter;
+$productBox-icon-bg: $formBorderGrayDark;
+$productBox-icon-color: $white;
+$productBox-title-color: $orange;
+$productBox-link-color: $grayDarkest;
+
+$newFurniture-title-color: $orange;
+$newFurniture-link-color: $grayDarkest;
+$newFurniture-bg: $white;
+$newFurniture-button-bg: $grayLight;
+$newFurniture-button-bg-hover: $orange;
+
+$productSearch-border: $formBorderGrayDark;
+$productSearch-text-color: $grayMedium;
+$productSearch-placeholder-color: $grayMedium;
+$productSearch-button-bg: transparent;
+
+$companyClaim-text-color: $textGrayLight;
+$companyClaim-icon-bg: $orange;
+$companyClaim-cart-bg: $orange;
+$companyClaim-cart-bg-hover: lighten($orange, 10%);
+$companyClaim-bottom-bg: $grayDark;
+$companyClaim-bottom-text-color: $textGrayBlue;
+
+$footer-menu-bg: $grayDark;
+$footer-menu-title-color: $white;
+$footer-menu-link-color: $textGrayMedium;
+$footer-menu-link-hover: $white;
+$footer-bottom-bg: $grayMedium;
+$footer-bottom-text-color: $textGrayMedium;
+$footer-bottom-link-color: $textGrayMedium;
+$footer-bottom-link-hover: $orange;
+
+$menuBar-bg: $white;
+$menuBar-link-color: $grayMedium;
+$menuBar-link-active-bg: $orange;
+$menuBar-link-active-color: $white;
+$menuBar-link-active-border: $orange;
+$menuBar-link-border: $grayMedium;
+
+$topBar-bg: $grayDarker;
+$topBar-link-color: $white;
+$topBar-link-hover: $orange;
