Refactor: Use SCSS variables for colors instead of hardcoded values

--- a/src/components/common/ProductBox/ProductBox.module.scss
+++ b/src/components/common/ProductBox/ProductBox.module.scss
@@ -1,15 +1,15 @@
 @import "../../../styles/settings.scss";
 
 .root {
-  background-color: #ffffff;
-  border: 1px solid #e1e1e1;
+  background-color: $main-bg-color;
+  border: 1px solid $main-border-color;
   margin-bottom: 2rem;
 
   .photo {
     position: relative;
     padding: 80% 10px 0 10px;
     background: {
-      color: #f4f5f7;
+      color: $white-text-color-secondary;
       size: contain;
       position: center;
       repeat: no-repeat;
@@ -24,7 +24,7 @@
       transform: translateX(-50%);
       background-color: #292929;
       border-radius: 50%;
-      color: #ffffff;
+      color: $white-text-color;
       padding: 30px 15px 5px 15px;
     }
 
@@ -76,8 +76,8 @@
     align-items: center;
   }
 
-  .active{
+  .active {
     background-color: $primary;
-    color: white;
+    color: $main-bg-color;
   }
 }
