--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -1,4 +1,6 @@
 $base-padding: 24px;
+$main-bg-color: #ffffff;
+$main-border-color: #e1e1e1;
 
 $header-topbar-bg: #434343;
 $header-bg: #363636;
@@ -9,5 +11,7 @@ $footer-bg: #363636;
 $primary: #d58e32;
 
 $text-color: #2a2a2a;
+$white-text-color: #ffffff;
+$white-text-color-secondary: #f4f5f7;
 
 $form-border-color: #292929;
