--- a/src/components/features/ProductSearch/ProductSearch.module.scss
+++ b/src/components/features/ProductSearch/ProductSearch.module.scss
@@ -32,7 +32,7 @@
       border: 0;
       font-size: 12px;
       background-color: transparent;
-      padding: 0px 30px 0px 45px;
+      padding: 0 30px 0 45px;
       position: relative;
       text-align: center;
       z-index: 1;
