Various corrections according to request change

--- a/src/components/layout/CompanyClaimHorizontal/CompanyClaimHorizontal.module.scss
+++ b/src/components/layout/CompanyClaimHorizontal/CompanyClaimHorizontal.module.scss
@@ -2,12 +2,14 @@
 @import "../CompanyClaim/CompanyClaim.module.scss";
 
 @media (max-width: 768px) {
+
   img {
     margin-bottom: -40px;
   }
 
   .phoneNumber p {
     font-size: 14px;
+    padding-bottom: 15px;
   }
 
   .cart {
