--- a/src/components/features/ProductSearch/ProductSearch.module.scss
+++ b/src/components/features/ProductSearch/ProductSearch.module.scss
@@ -34,7 +34,7 @@
     ul { 
       padding: 0;
       margin: 0;
-      padding: 15px 50px 0px 50px;
+      padding: 15px 50px 0 50px;
 
       li {
         position: relative;
