Update NewFurniture component

--- a/src/components/features/NewFurniture/NewFurniture.module.scss
+++ b/src/components/features/NewFurniture/NewFurniture.module.scss
@@ -103,3 +103,15 @@
     }
   }
 }
+
+.productsWrapper{
+  transition: all $hover-animation-time ease-in-out;
+}
+
+.fadeOut {
+  opacity: 0;  
+}
+
+.fadeIn {
+  opacity: 1;
+}
