--- a/src/components/features/Promoted/Promoted.module.scss
+++ b/src/components/features/Promoted/Promoted.module.scss
@@ -1,11 +1,12 @@
+@import "../../../styles/settings.scss";
+
 .promoted {
-  /* Ewentualne style sekcji głównej */
+  padding-top: 80px;
 }
 
-/* Kontener z obrazkiem w tle i overlayem po prawej stronie */
 .featuredWrapper {
   position: relative;
-  flex: 1; /* wypełnia całą wysokość .col-md-8 */
+  flex: 1;
   width: 100%;
   background-size: cover;
   background-position: center;
@@ -13,13 +14,12 @@
   overflow: hidden;
 }
 
-/* Pasek overlay na środku wysokości */
 .overlay {
   position: absolute;
   left: 0;
   right: 0;
-  top: 25%;     /* początek w 25% wysokości */
-  height: 50%;  /* zajmuje środkowe 50% */
+  top: 25%;
+  height: 50%;
   background-color: rgba(0, 0, 0, 0.8);
 
   display: flex;
@@ -53,23 +53,22 @@
     transition: background-color 0.3s;
 
     &:hover {
-      background-color: #333;
+      background-color: orange;
       color: #fff;
     }
   }
 }
 
-/* Strzałki na dole */
 .arrows {
   position: absolute;
-  bottom: 20px;
+  bottom: 0;
   left: 50%;
   transform: translateX(-50%);
   display: flex;
-  gap: 1rem;
+  width: 100%;
 
   button {
-    width: 60px;  /* wydłużone */
+    width: 50%;
     height: 35px;
     border: none;
     background-color: #000;
@@ -79,17 +78,11 @@
     border-radius: 4px;
 
     &:hover {
-      background-color: #333;
+      background-color: orange;
     }
 
-    /* Prawy przycisk ma na stałe klasę active -> kolor pomarańczowy */
     &.active {
       background-color: orange;
     }
-  }
-
-  .arrowLeft,
-  .arrowRight {
-    /* ewentualne dodatkowe style */
   }
 }
