--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -39,6 +39,9 @@ $button-text-color: $white;
 $button-hover-text-color: $white;
 $button-hover-bg: $grayDark;
 
+$compareBar-bg: $grayDarker;
+$compareBar-btn-bg: $orange;
+
 $featureBox-bg: $white;
 $featureBox-text-color: $grayMedium;
 $featureBox-icon-color: $white;
