--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -42,6 +42,8 @@ $button-hover-bg: $grayDark;
 $compareBar-bg: $grayDarker;
 $compareBar-btn-bg: $orange;
 
+$compareBarItem-btn-text: $grayDarker;
+
 $featureBox-bg: $white;
 $featureBox-text-color: $grayMedium;
 $featureBox-icon-color: $white;
