--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -77,6 +77,9 @@ $productSearch-text-color: $grayMedium;
 $productSearch-placeholder-color: $grayMedium;
 $productSearch-button-bg: transparent;
 
+$starRating-star: $grayDarkest;
+$starRating-star-myRating: $orange;
+
 $companyClaim-text-color: $textGrayLight;
 $companyClaim-icon-bg: $orange;
 $companyClaim-cart-bg: $orange;
