--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -3,15 +3,17 @@ $base-padding: 24px;
 // List of variables with colors - !ONLY FOR USE IN THIS FILE!
 
 $orange: #d58e32;
-$grayDarker: #2a2a2a;
+$grayDarker: #434343;
 $grayDark: #363636;
-$grayMedium: #434343;;
-$borderGrayDark: #292929;
-$borderGrayLight: #b6b6b6;
+$grayMedium: #2a2a2a;
+$formBorderGrayDark: #292929;
+$featureBorderGrayLight: #b6b6b6;
+$borderBottomGrayLight: #e2e2e2;
 $white: #ffffff;
 $black: #000000;
 $grayLight: #e1e1e1;
 $grayLighter: #f4f5f7;
+$grayDarkest: #2a2a2a;
 $textGrayLight: #d8d8d8;
 $textGrayMedium: #a9a9a9;
 $textGrayBlue: #e0e3ed;
@@ -19,8 +21,8 @@ $textGrayBlue: #e0e3ed;
 // List of variables with colors - !TO BE REMOVED AFTER ALL CHANGES!
 
 $primary: $orange;
-$form-border-color: $borderGrayDark;
-$text-color: $grayDarker;
+$form-border-color: $formBorderGrayDark;
+$text-color: $grayDarkest;
 
 // List of variables with colors - !FOR USE IN COMPONENTS!
 
@@ -41,27 +43,36 @@ $featureBox-text-color: $grayMedium;
 $featureBox-icon-color: $white;
 $featureBox-bg-after: $orange;
 $featureBox-content-color: $orange;
-$featureBox-border-color: $borderGrayLight;
+$featureBox-border-color: $featureBorderGrayLight;
 $featureBox-border-color-after: $orange;
 
 $productBox-bg: $white;
 $productBox-border: $grayLight;
 $productBox-overlay-bg: $grayLighter;
-$productBox-icon-bg: $borderGrayDark;
+$productBox-icon-bg: $formBorderGrayDark;
 $productBox-icon-color: $white;
 $productBox-title-color: $orange;
-$productBox-link-color: $grayDarker;
+$productBox-link-color: $grayDarkest;
+$productBox-title-hover-color: $orange;
+$productBox-price-hover-bg: $orange;
+$productBox-long-line-horizontal: $grayMedium;
+$productBox-short-line-horizontal: $orange;
+$productBox-oldPrice: $featureBorderGrayLight;
 
 $newFurniture-title-color: $orange;
-$newFurniture-link-color: $grayDarker;
+$newFurniture-link-color: $grayDarkest;
 $newFurniture-bg: $white;
 $newFurniture-button-bg: $grayLight;
 $newFurniture-button-bg-hover: $orange;
 
-$productSearch-border: $borderGrayDark;
+$productSearch-border: $formBorderGrayDark;
 $productSearch-text-color: $grayMedium;
 $productSearch-placeholder-color: $grayMedium;
 $productSearch-button-bg: transparent;
+$productSearch-button-category-hover-select-color: $orange;
+
+$starRating-star: $grayDarkest;
+$starRating-star-myRating: $orange;
 
 $companyClaim-text-color: $textGrayLight;
 $companyClaim-icon-bg: $orange;
@@ -89,19 +100,61 @@ $menuBar-link-border: $grayMedium;
 $topBar-bg: $grayDarker;
 $topBar-link-color: $white;
 $topBar-link-hover: $orange;
-$form-border-color: $borderGrayDark;
+$form-border-color: $formBorderGrayDark;
+
+$featured-overlay-bg: $black;
+$featured-overlay-text-color: $white;
+$featured-shopNow-bg: $white;
+$featured-shopNow-text-color: $black;
+$featured-shopNow-bg-hover: $orange;
+$featured-shopNow-text-color-hover: $white;
+$featured-arrow-bg: $black;
+$featured-arrow-bg-hover: $orange;
+
+$promotedBox-border: $grayLight;
+$promotedBox-text-color: $grayDarkest;
+$promotedBox-header-bg: $black;
+$promotedBox-header-text: $white;
+$promotedBox-dots-bg: $white;
+$promotedBox-dots-active: $orange;
+$promotedBox-sale-text: $white;
+$promotedBox-addToCart-bg: $black;
+$promotedBox-addToCart-text: $white;
+$promotedBox-addToCart-hover-bg: lighten($black, 20%);
+$promotedBox-timer-bg: $black;
+$promotedBox-timer-text: $white;
+$promotedBox-stars-color: $black;
+$promotedBox-line-bg: $grayLight;
+$promotedBox-line-active-bg: $orange;
+$promotedBox-icon-hover-bg: $grayLighter;
+$promotedBox-icon-hover-border: $grayLight;
+$promotedBox-icon-hover-color: $grayDarkest;
+$promotedBox-oldPrice-color: $grayLight;
+$promotedBox-newPrice-bg: $black;
+$promotedBox-newPrice-text: $white;
 
 $brands-bg: $white;
-$brands-line-color: $borderGrayLight;
+$brands-line-color: $borderBottomGrayLight;
 $brands-arrow-bg: $black;
-$brands-arrow-color: $borderGrayLight;
-$brands-arrow-hover-color: $grayMedium;
+$brands-arrow-color: $borderBottomGrayLight;
+$brands-arrow-hover-color: $orange;
 $brands-box-bg: $white;
-$brands-box-border: $borderGrayLight;
+$brands-box-border: $borderBottomGrayLight;
+
+$feedback-border-bottom-color: $borderBottomGrayLight;
+$feedback-header-border-bottom-color: $orange;
+$feedback-header-text-color: $orange;
+$feedback-dots-bg: $white;
+$feedback-dots-non-active: $grayLight;
+$feedback-dots-active: $orange;
+$feedback-quoteIcon-color: $black;
+$feedback-text-color: $grayMedium;
+$feedback-img-border-color: $grayLight;
+$feedback-author-header-text-color: $grayDark;
+$feedback-author-description-text-color: $textGrayMedium;
 
 // ANIMATIONS
 
-// Animation time for different effects
 $hover-animation-time: 250ms;
 $hover-background-time: 250ms;
 $hover-text-time: 250ms;
@@ -110,7 +163,6 @@ $hover-text-color: #ffffff;
 $hover-text-color-dark-bg: $primary;
 $hover-background-color: $primary;
 
-// Placeholder
 %hover-animation {
   transition: $hover-animation-time;
 
