--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -7,6 +7,8 @@ $grayDarker: #434343;
 $grayDark: #363636;
 $grayMedium: #2a2a2a;
 $formBorderGrayDark: #292929;
+$featureBorderGrayLight: #b6b6b6;
+$borderBottomGrayLight: #e2e2e2;
 $white: #ffffff;
 $black: #000000;
 $grayLight: #e1e1e1;
@@ -37,11 +39,12 @@ $button-hover-text-color: $white;
 $button-hover-bg: $grayDark;
 
 $featureBox-bg: $white;
-$featureBox-text-transform-color: $grayMedium;
+$featureBox-text-color: $grayMedium;
 $featureBox-icon-color: $white;
 $featureBox-bg-after: $orange;
-$featureBox-border-color: $orange;
 $featureBox-content-color: $orange;
+$featureBox-border-color: $featureBorderGrayLight;
+$featureBox-border-color-after: $orange;
 
 $productBox-bg: $white;
 $productBox-border: $grayLight;
@@ -50,6 +53,11 @@ $productBox-icon-bg: $formBorderGrayDark;
 $productBox-icon-color: $white;
 $productBox-title-color: $orange;
 $productBox-link-color: $grayDarkest;
+$productBox-title-hover-color: $orange;
+$productBox-price-hover-bg: $orange;
+$productBox-long-line-horizontal: $grayMedium;
+$productBox-short-line-horizontal: $orange;
+$productBox-oldPrice: $featureBorderGrayLight;
 
 $newFurniture-title-color: $orange;
 $newFurniture-link-color: $grayDarkest;
@@ -61,6 +69,10 @@ $productSearch-border: $formBorderGrayDark;
 $productSearch-text-color: $grayMedium;
 $productSearch-placeholder-color: $grayMedium;
 $productSearch-button-bg: transparent;
+$productSearch-button-category-hover-select-color: $orange;
+
+$starRating-star: $grayDarkest;
+$starRating-star-myRating: $orange;
 
 $companyClaim-text-color: $textGrayLight;
 $companyClaim-icon-bg: $orange;
@@ -89,6 +101,7 @@ $topBar-bg: $grayDarker;
 $topBar-link-color: $white;
 $topBar-link-hover: $orange;
 $form-border-color: $formBorderGrayDark;
+
 $featured-overlay-bg: $black;
 $featured-overlay-text-color: $white;
 $featured-shopNow-bg: $white;
@@ -99,30 +112,49 @@ $featured-arrow-bg: $black;
 $featured-arrow-bg-hover: $orange;
 
 $promotedBox-border: $grayLight;
-$promotedBox-text-color: #333;
+$promotedBox-text-color: $grayDarkest;
 $promotedBox-header-bg: $black;
 $promotedBox-header-text: $white;
 $promotedBox-dots-bg: $white;
-$promotedBox-dots-active: $primary;
+$promotedBox-dots-active: $orange;
 $promotedBox-sale-text: $white;
 $promotedBox-addToCart-bg: $black;
 $promotedBox-addToCart-text: $white;
 $promotedBox-addToCart-hover-bg: lighten($black, 20%);
 $promotedBox-timer-bg: $black;
 $promotedBox-timer-text: $white;
-$promotedBox-stars-color: gold;
+$promotedBox-stars-color: $black;
 $promotedBox-line-bg: $grayLight;
-$promotedBox-line-active-bg: $primary;
-$promotedBox-icon-hover-bg: #f0f0f0;
-$promotedBox-icon-hover-border: #ccc;
-$promotedBox-icon-hover-color: #333;
-$promotedBox-oldPrice-color: #999;
+$promotedBox-line-active-bg: $orange;
+$promotedBox-icon-hover-bg: $grayLighter;
+$promotedBox-icon-hover-border: $grayLight;
+$promotedBox-icon-hover-color: $grayDarkest;
+$promotedBox-oldPrice-color: $grayLight;
 $promotedBox-newPrice-bg: $black;
 $promotedBox-newPrice-text: $white;
 
+$brands-bg: $white;
+$brands-line-color: $borderBottomGrayLight;
+$brands-arrow-bg: $black;
+$brands-arrow-color: $borderBottomGrayLight;
+$brands-arrow-hover-color: $orange;
+$brands-box-bg: $white;
+$brands-box-border: $borderBottomGrayLight;
+
+$feedback-border-bottom-color: $borderBottomGrayLight;
+$feedback-header-border-bottom-color: $orange;
+$feedback-header-text-color: $orange;
+$feedback-dots-bg: $white;
+$feedback-dots-non-active: $grayLight;
+$feedback-dots-active: $orange;
+$feedback-quoteIcon-color: $black;
+$feedback-text-color: $grayMedium;
+$feedback-img-border-color: $grayLight;
+$feedback-author-header-text-color: $grayDark;
+$feedback-author-description-text-color: $textGrayMedium;
+
 // ANIMATIONS
 
-// Animation time for different effects
 $hover-animation-time: 250ms;
 $hover-background-time: 250ms;
 $hover-text-time: 250ms;
@@ -131,7 +163,6 @@ $hover-text-color: #ffffff;
 $hover-text-color-dark-bg: $primary;
 $hover-background-color: $primary;
 
-// Placeholder
 %hover-animation {
   transition: $hover-animation-time;
 
