--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -103,16 +103,19 @@ $menuBar-link-active-bg: $orange;
 $menuBar-link-active-color: $white;
 $menuBar-link-active-border: $orange;
 $menuBar-link-border: $grayMedium;
-
 $menuBar-shadow-color: rgba($shadow-dark, 0.2);
 $menuBar-link-border-top: $white;
 $menuBar-menuButton-bg: transparent;
 $menuBar-menuButton-color: $orange;
 $menuBar-dropDownMenu-hover-bg: rgba($orange, 0.7);
 
+$sectionHeader-title: $orange;
+$sectionHeader-horizontal-short-line: $orange;
+
 $topBar-bg: $grayDarker;
 $topBar-link-color: $white;
 $topBar-link-hover: $orange;
+
 $form-border-color: $formBorderGrayDark;
 
 $featured-overlay-bg: $black;
@@ -169,6 +172,10 @@ $feedback-text-color: $grayMedium;
 $feedback-img-border-color: $grayLight;
 $feedback-author-header-text-color: $grayDark;
 $feedback-author-description-text-color: $textGrayMedium;
+
+$tableItem-link-color: $black;
+
+$form-border-color: #292929;
 
 // ANIMATIONS
 
